--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "routinebuilder",
   "version": "1.0.0",
   "description": "Web application that allows users to create custom gymnastics routines and simulate scores.",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
